--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -143,7 +143,8 @@ input.form-control,
 select.form-control,
 .main-content .btn-default,
 .modal-body .btn-default,
-.modal-footer .btn-default {
+.modal-footer .btn-default,
+.queue .table-active-sorting {
     border-color: #252525 !important;
 }
 
