--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -120,7 +120,7 @@
 
         <!-- Inclusion is faster than external scripts. We load momentJS locale seperatly so failure won't break anything -->
         <script type="text/javascript">
-            <!--#include raw $webdir + "/static/javascripts/jquery-2.2.0.min.js"#-->
+            <!--#include raw $webdir + "/static/javascripts/jquery.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/jquery-ui.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/jquery.peity.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/moment.js"#-->
