--- a/interfaces/Glitter/templates/include_history.tmpl
+++ b/interfaces/Glitter/templates/include_history.tmpl
@@ -5,7 +5,8 @@
             <tr>
                 <th style="width: 25px;"></th>
                 <th></th>
-                <th class="status-header"></th>
+                <th class="table-status-header" data-bind="css: { 'table-header-status-smaller' : extraHistoryColumn }"></th>
+                <th class="table-header-extra" data-bind="css: { 'table-extra-header-visible' : extraHistoryColumn }"></th>
                 <th style="width: 130px;"></th>
                 <th style="width: 60px;"></th>
             </tr>
@@ -136,6 +137,10 @@
                     <!-- /ko -->
                 </td>
                 <td class="status row-wrap-text" data-bind="text: statusText()" onclick="showDetails(this)"></td>
+                <td class="row-extra-text" onclick="showDetails(this)">
+                    <div class="row-wrap-text" data-bind="text: extraText">
+                    </div>
+                </td>
                 <td class="history-completedon row-wrap-text" data-bind="text: completedOn(), attr: { 'data-timestamp': completed }" onclick="showDetails(this)"></td>
                 <td class="delete">
                     <div class="dropdown">
