--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -333,17 +333,30 @@
                             </div>
                             <div class="form-group">
                                 <label class="col-sm-6 control-label">
-                                    $T('Glitter-showExtraColumn')<br />
+                                    $T('Glitter-showExtraQueueColumn')<br />
                                     <span class="label label-warning">&gt; 1200 pixels</span>
                                 </label>
                                 <div class="col-sm-4">
-                                    <select name="general-extra-column" class="form-control" data-bind="value: extraColumn">
+                                    <select name="general-extra-column" class="form-control" data-bind="value: extraQueueColumn">
                                         <option value="">$T('none')</option>
                                         <option value="category">$T('category')</option>
                                         <option value="priority">$T('priority')</option>
                                         <option value="processing">$T('swtag-pp')</option>
                                         <option value="scripts">$T('eoq-scripts')</option>
                                         <option value="age">$T('nzo-age')</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-6 control-label">
+                                    $T('Glitter-showExtraHistoryColumn')<br />
+                                    <span class="label label-warning">&gt; 1200 pixels</span>
+                                </label>
+                                <div class="col-sm-4">
+                                    <select name="general-extra-column" class="form-control" data-bind="value: extraHistoryColumn">
+                                        <option value="">$T('none')</option>
+                                        <option value="category">$T('category')</option>
+                                        <option value="size">$T('size')</option>
                                     </select>
                                 </div>
                             </div>
