Add Speed as Extra history column

--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -357,6 +357,7 @@
                                         <option value="">$T('none')</option>
                                         <option value="category">$T('category')</option>
                                         <option value="size">$T('size')</option>
+                                        <option value="speed">$T('Glitter-speed')</option>
                                     </select>
                                 </div>
                             </div>
