--- a/interfaces/Glitter/templates/include_menu.tmpl
+++ b/interfaces/Glitter/templates/include_menu.tmpl
@@ -5,11 +5,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a href="./">
-            <img src="./static/images/logo.png" width="120" height="45" alt="" id="navbar-logo-big" />
-            <img src="./static/images/logo-small.png" width="45" height="45" alt="" id="navbar-logo-small" />
+        <a class="navbar-logo" href="./">
+            #include $webdir + "/static/images/sabnzbd_icon.svg"#
         </a>
-
         <div class="btn-group">
             <div class="btn-group">
                 <button type="button" class="btn btn-default navbar-btn" data-bind="click: pauseToggle, attr: { 'title': downloadsPaused() ? '$T('link-resume')' : '$T('link-pause')' }">
