Add Optional label to Retry password

--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -563,7 +563,7 @@
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-lock"></span>
                                 </span>
-                                <input type="text" class="form-control" id="retry_job_password" placeholder="$T('srv-password')" />
+                                <input type="text" class="form-control" id="retry_job_password" placeholder="$T('srv-password') ($T('srv-optional'))" />
                             </div>
                         </div>
                     </fieldset>
