#538 'Add all' for Orphaned Jobs

--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -29,7 +29,7 @@ legend,
 #modal-options legend a,
 #modal-item-files .item-files-table .progress small,
 #modal-options .options-switch label, 
-#modal-options #options-orphans .remove-all-orphaned,
+#modal-options #options-orphans .process-all-orphaned,
 .text-muted {
     color: #EBEBEB;
 }
