--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -1244,7 +1244,7 @@ tr.queue-item>td:first-child>a {
 }
 
 #modal-options .options-switch label,
-#modal-options #options-orphans .remove-all-orphaned {
+#modal-options #options-orphans .process-all-orphaned {
     font-size: 1.4rem;
     margin-top: 5px;
     margin-bottom: 10px;
@@ -1254,13 +1254,13 @@ tr.queue-item>td:first-child>a {
 }
 
 #modal-options .options-switch a,
-#modal-options #options-orphans .remove-all-orphaned,
+#modal-options #options-orphans .process-all-orphaned,
 #modal-options .options-switch input+span {
     opacity: 0.6;
 }
 
 #modal-options .options-switch label:hover span,
-#modal-options #options-orphans .remove-all-orphaned:hover,
+#modal-options #options-orphans .process-all-orphaned:hover,
 #modal-options .options-switch a:hover {
     opacity: 1;
 }
@@ -1278,8 +1278,9 @@ tr.queue-item>td:first-child>a {
     margin-right: 4px;
 }
 
-#modal-options #options-orphans .remove-all-orphaned {
+#modal-options #options-orphans .process-all-orphaned {
     margin-right: 8px;
+    margin-left: 5px;
     float: right;
 }
 
@@ -1694,7 +1695,7 @@ input[name="nzbURL"] {
     font-size: 1em;
 }
 .container-compact #modal-options .options-switch label,
-.container-compact #modal-options #options-orphans .remove-all-orphaned {
+.container-compact #modal-options #options-orphans .process-all-orphaned {
     font-size: 1em;
 }
 .container-compact #modal-options .options-switch input {
