#521 New logo in Glitter and Config preview

--- a/interfaces/Config/templates/login/main.tmpl
+++ b/interfaces/Config/templates/login/main.tmpl
@@ -22,7 +22,7 @@
 	<body>
         <div class="account-wall">
             <div class="text-center logo-header">
-                <img src="../staticcfg/images/logo.png" alt="SABnzbd">
+                <!--#include $webdir + "/staticcfg/images/logo-full.svg"#-->
                 <a href="http://wiki.sabnzbd.org/faq#why-login" target="_blank">
                     <span class="glyphicon glyphicon-question-sign"></span>
                 </a>
