--- a/interfaces/Plush/templates/main.tmpl
+++ b/interfaces/Plush/templates/main.tmpl
@@ -77,7 +77,7 @@
     </div>
     <div class="centerpiece">
       <div class="main_sprite_container sprite_rounded_area_bg" id="time-left"><p><span id="stats_eta">&sdot;</span>&nbsp;$T('Plush-left')</p></div>
-      <div class="sabnzbd_logo main_sprite_container sprite_sabnzbdplus_logo"></div>
+      <div class="sabnzbd_logo main_sprite_container"><!--#include $webdir + "/../../Config/templates/staticcfg/images/logo-full.svg"#--></div>
       <div class="main_sprite_container sprite_rounded_area_bg_edged" id="speed"><p><span id="stats_speed">&sdot;</span></p></div>
       <div class="queue-buttons" id="speed-wrapper">
         <ul>
