--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -594,9 +594,12 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <img src="./static/images/logo.png" width="120" height="45" alt="" />
+                <h4 class="modal-title">$T('menu-help')</h4>
             </div>
             <div class="modal-body">
+                #include $webdir + "/../../Config/templates/staticcfg/images/logo-full.svg"#
+                <p><strong>SABnzbd $('version'):</strong> $version</p>
+                <hr/>
                 <table>
                     <tbody>
                         <tr>
@@ -608,15 +611,17 @@
                             <td><a href="http://forums.sabnzbd.org/" target="_blank">http://forums.sabnzbd.org/</a></td>
                         </tr>
                         <tr>
+                            <td><strong>GitHub:</strong></td>
+                            <td><a href="https://github.com/sabnzbd/sabnzbd" target="_blank">https://github.com/sabnzbd/sabnzbd/</a></td>
+                        </tr>
+                        <tr>
                             <td><strong>$T('menu-irc'):</strong></td>
                             <td><a href="http://www.sabnzbd.org/live-chat/" target="_blank">http://www.sabnzbd.org/live-chat/</a></td>
                         </tr>
                     </tbody>
                 </table>
-
-                <p><strong>SABnzbd $('version'):</strong> $version</p>
-                <p><small>Copyright (C) 2008-2016, The SABnzbd Team &lt;team@sabnzbd.org&gt;</small></p>
-                <p><small>$T('yourRights') </small></p>
+                <hr/>
+                <p><small>Copyright (C) 2008-2016, The SABnzbd Team &lt;team@sabnzbd.org&gt;<br/>$T('yourRights') </small></p>
             </div>
         </div>
     </div>
