--- a/interfaces/Config/templates/_inc_footer_uc.tmpl
+++ b/interfaces/Config/templates/_inc_footer_uc.tmpl
@@ -6,7 +6,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title"></h4>
                     </div>
                     <div class="modal-body">
